# ModernCppProject2025

./: .gitignore  CMakeLists.txt  README.md
include/: bresenham.hpp  dataloader.hpp  transformer.hpp  visualizer.hpp
src/: bresenham.cpp  dataloader.cpp  main.cpp  transformer.cpp
